@@ -50,7 +50,7 @@ module Fairy
 	[@main_precat, *@others_precat].each do |input|
 	  @input = input
 	  input.output = @input
-	  @controller.assign_ntask(self, @create_node_mutex) do
+	  @controller.assign_ntasks(self, @create_node_mutex) do
 	    |ntask, mapper, opts={}|
 #	    njob = create_and_add_node(processor, mapper)
 	    njob = create_node(ntask) {|node|
